--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
         <h2>Popular destinations </h2>
         <div class="destinations-cards">
             <div class="card">
-                <img src="C:\Users\LENOVO\Desktop\project\travel1.jpg" alt="pairs">
+                <img src="https://i.ibb.co/0p6ntfkN/1000004655.jpg" alt="pairs">
                 <h3>pairs</h3>
                 <p>The city of lights and love!</p>
             </div>
             <div class="card">
-                <img src="C:\Users\LENOVO\Desktop\project\travel2.jpg" alt="Maldives">
+                <img src="https://i.ibb.co/WNdm7V22/1000004657.jpg" alt="Maldives">
                 <h3>Maldives</h3>
                 <p>Tropical paradise with blue water!</p>
             </div>
             <div class="card">
-                <img src="C:\Users\LENOVO\Desktop\project\travel3.jpg" alt="New york">
+                <img src="https://i.ibb.co/jky3xtgT/1000004659.jpg" alt="New york">
                 <h3>New york</h3>
                 <p>The city that never sleeps!</p>
             </div>
